# LettuceDetect

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-tests.yml
demo/: detection.ipynb  detection_api.ipynb  streamlit_demo.py
docs/: EUROBERT.md  EVALUATION.md  README.md
lettucedetect/datasets/: hallucination_dataset.py  ragbench.py  ragtruth.py
lettucedetect/detectors/: __init__.py  base.py  cache.py  factory.py  llm.py  prompt_utils.py  transformer.py
lettucedetect/model/: dataset.py  evaluate.py  train.py
lettucedetect/models/: evaluator.py  inference.py  trainer.py
lettucedetect/preprocess/: preprocess_ragbench.py  preprocess_ragtruth.py
lettucedetect/prompts/: examples_cn.json  examples_de.json  examples_en.json  examples_es.json  examples_fr.json  examples_it.json  examples_pl.json  hallucination_detection.txt  qa_prompt_cn.txt  qa_prompt_de.txt  qa_prompt_en.txt  qa_prompt_es.txt  qa_prompt_fr.txt  qa_prompt_it.txt  qa_prompt_pl.txt  qa_prompt_tr.txt  summary_prompt_cn.txt  summary_prompt_de.txt  summary_prompt_en.txt  summary_prompt_es.txt  summary_prompt_fr.txt  summary_prompt_it.txt  summary_prompt_pl.txt  summary_prompt_tr.txt
lettucedetect_api/: client.py  models.py  server.py  test_client.py  test_server.py
scripts/: analyze_tokens.py  download_dataset.py  download_ragtruth.py  evaluate.py  evaluate_llm.py  evaluate_ragas.py  hf_model.py  ragas_baseline.py  start_api.py  test_small.json  train.py  upload.py  upload_dataset.py
scripts/translate/: test_hal_tags.py  translate.py
tests/: __init__.py  conftest.py  lettucedetect_eval_report.txt  methods.py  pytest.ini  run_pytest.py  test_inference_pytest.py  test_new.py
translate/: translate.py
