[metadata]
name = lettucedetect
version = 0.1.1
description = A package for hallucination detection evaluation and model analysis.
author = Adam Kovacs
author_email = kovacs@krlabs.eu
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/krlabsorg/lettucedetect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    torch>=2.6.0
    transformers>=4.48.3
    tqdm>=4.65.0
    scikit-learn>=1.6.1
    numpy>=2.2.2
python_requires = >=3.10
